# bitswarm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: compatibility.md  integration.md  protocol.md  threat_model.md
docs/examples/: training-telemetry.json
docs/reviews/: 2026-04-28-alpha1-gate.md
src/bitswarm/: __init__.py  cli.py  constants.py  version.py
src/bitswarm/ariang/: __init__.py  app.py  rpc.py  runs.py  telemetry.py
src/bitswarm/client/: __init__.py  cache.py  downloader.py  seeder.py  session.py  transport.py
src/bitswarm/protocol/: __init__.py  errors.py  hashing.py  manifest.py  paths.py  peer.py  pieces.py  schemas.py  verifier.py
src/bitswarm/tracker/: __init__.py  app.py  auth.py  schemas.py  store.py
src/bitswarm/webui/: __init__.py  app.py  models.py  state.py
src/bitswarm/webui/static/: app.js  index.html  styles.css
tests/: conftest.py  test_ariang_ui.py  test_cli.py  test_client_download.py  test_manifest.py  test_piece_hashing.py  test_tracker.py  test_verifier.py  test_webui.py
